--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "jest",
     "lint": "eslint src",
-    "lint:fix": "eslint src --fix"
+    "lint:fix": "eslint src --fix",
+    "prepare": "husky"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,9 @@
     "url": "https://github.com/Chudofa-L/weather_page/issues"
   },
   "homepage": "https://github.com/Chudofa-L/weather_page#readme",
+  "lint-staged": {
+    "src/**/*.js": "eslint"
+  },
   "description": "",
   "devDependencies": {
     "@babel/core": "^7.26.10",
@@ -32,8 +36,10 @@
     "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-prettier": "^5.2.6",
     "globals": "^16.0.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "lint-staged": "^15.5.1",
     "prettier": "3.5.3"
   }
 }
